fixes spacing

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -7,10 +7,6 @@
 
 @layer base {
     body {
-        @apply .font-sans {
-            font-family: nunito, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
-                          Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-                          "Segoe UI Symbol", "Noto Color Emoji";
                         }
                         li {
                             @apply px-4;
@@ -32,4 +28,4 @@
                             hsla(242, 74%, 61%, 0.8)   
                         )!important;
                     }
-                }
+                
